# aoc2025

./: .gitignore  meson.build
common/: meson.build  utils.cc  utils.hpp
day1/: main.cc  meson.build  part1.cc  part2.cc
day10/: part1.cc
day11/: meson.build  part1.cc  part2.cc
day2/: main.cc  meson.build  part2.cc
day3/: meson.build  part1.cc  part2.cc
day4/: meson.build  part1.cc  part2.cc
day5/: main.cc  meson.build  part2.cc
day6/: main.cc  meson.build
day7/: meson.build  part1.cc  part2.cc
day8/: meson.build  part1.cc  part2.cc
day9/: part1.cc
