project(
  'aoc2025',
  'cpp',
  version: '0.1',
  default_options: ['cpp_std=c++23', 'warning_level=3']
)

add_project_arguments('-std=c++23', language: 'cpp')

subdir('common')
subdir('day1')
subdir('day2')
subdir('day3')
subdir('day4')
subdir('day5')
subdir('day6')
subdir('day7')
subdir('day8')
subdir('day9')
subdir('day10')
subdir('day11')
